@@ -56,7 +56,8 @@ task runGui(type: JavaExec) {
     
     jvmArgs = [
         '--module-path', classpath.asPath,
-        '--add-modules', 'javafx.controls,javafx.fxml'
+        '--add-modules', 'javafx.controls,javafx.fxml,javafx.media,javafx.graphics',
+        '--add-opens', 'javafx.graphics/com.sun.glass.utils=ALL-UNNAMED'
     ]
 }
 
